@@ -1,5 +1,9 @@
 Release CMTK-3.3.1:
 
+(r5419) Fixed: bug in PolynomialXform class, which lead to out-of-range
+	array access in the parameter vector when trying to get the
+	linear matrix of a zero-degree transform (which doesn't exist).
+(r5418) Fixed: some compiler warnings revealed by SolarisStudio compiler.
 
 Release CMTK-3.3.0 (2016-01-16):
 
